Begin grid layout and design

--- a/index.html
+++ b/index.html
@@ -7,29 +7,75 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <aside id="sidebar">
-        <div class="dashboard">
-            <h2>Dashboard</h2>
-        </div>
-        <div class="home">
-            <p>Home</p>
-            <p>Profile</p>
-            <p>Messages</p>
-            <p>History</p>
-            <p>Tasks</p>
-            <p>Communities</p>
-        </div>
-        <div class="setting">
-            <p>Settings</p>
-            <p>Support</p>
-            <p>Privacy</p>
-        </div>
-    </aside>
-    <header id="heading">
-
-    </header>
-    <main id="mainContent">
-
-    </main>
+    <div class="container1">
+        <aside id="sidebar">
+            <div id="dashboard">
+                <h1>Dashboard</h1>
+            </div>
+            <div class="home">
+                <p>Home</p>
+                <p>Profile</p>
+                <p>Messages</p>
+                <p>History</p>
+                <p>Tasks</p>
+                <p>Communities</p>
+            </div>
+            <div class="settings">
+                <p>Settings</p>
+                <p>Support</p>
+                <p>Privacy</p>
+            </div>
+        </aside>
+        <header id="heading">
+            <div class="search"></div>
+            <h3>Morgan Oakley</h3>
+            <p>Hi there,</p>
+            <h2>Morgan Oakley (@morgan)</h2>
+            <div>
+                <div class="links">New</div>
+                <div class="links">Upload</div>
+                <div class="links">Share</div>
+            </div>
+        </header>
+        <main id="main-content">
+            <h3>Your Projects</h3>
+            <div class="container2">
+                <div class="projects">
+                    <h3>Super Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, soluta eveniet! Eius, nostrum? Delectus, laboriosam dicta.</p>
+                </div>
+                <div class="projects">
+                    <h3>Less Cool Project</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident molestias ipsum, nihil incidunt laboriosam placeat. At magnam voluptas exercitationem magni veniam maxime impedit quasi?</p>
+                </div>
+                <div class="projects">
+                    <h5>Site Maintenance</h5>
+                    <hr>
+                    <h5>Community Share Day</h5>
+                    <hr>
+                    <h5>Update Privacy Policy</h5>
+                </div>
+                <div class="projects">
+                    <h3>Impossible App</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aut minus vero a laborum.</p>
+                </div>
+                <div class="projects">
+                    <h3>Easy Peasy App</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, praesentium ratione? Voluptatibus natus exercitationem, voluptate rerum qui recusandae quibusdam doloribus.</p>
+                </div>
+                <div class="projects" id="ad">
+                    <h3>Ad Blocker</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eligendi quia blanditiis maxime in suscipit voluptates adipisci repellendus.</p>
+                </div>
+                <div class="projects" id="money">
+                    <h3>Money Maker</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id atque iure excepturi possimus. Laborum reiciendis debitis vel! Deleniti ratione deserunt molestiae placeat?</p>
+                </div>
+                <div class="projects">
+                    <h3>Trending</h3>
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
