--- a/index.html
+++ b/index.html
@@ -27,18 +27,23 @@
             </div>
         </aside>
         <header id="heading">
-            <div class="search"></div>
-            <h3>Morgan Oakley</h3>
-            <p>Hi there,</p>
-            <h2>Morgan Oakley (@morgan)</h2>
-            <div>
+            <div class="flex-container1">
+                <div class="search"></div>
+                <h3>Morgan Oakley</h3>
+            </div>
+            <div class="flex-container2">
+                <div class="intro">
+                    <p>Hi there,</p>
+                    <h2>Morgan Oakley (@morgan)</h2>
+                </div>
                 <div class="links">New</div>
                 <div class="links">Upload</div>
                 <div class="links">Share</div>
             </div>
         </header>
         <main id="main-content">
-            <h3>Your Projects</h3>
+            <h3 id="project">Your Projects</h3>
+            <h3 id="announcments">Announcments</h3>
             <div class="container2">
                 <div class="projects">
                     <h3>Super Cool Project</h3>
@@ -48,7 +53,7 @@
                     <h3>Less Cool Project</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident molestias ipsum, nihil incidunt laboriosam placeat. At magnam voluptas exercitationem magni veniam maxime impedit quasi?</p>
                 </div>
-                <div class="projects">
+                <div class="projects" id="announcments">
                     <h5>Site Maintenance</h5>
                     <hr>
                     <h5>Community Share Day</h5>
@@ -71,8 +76,11 @@
                     <h3>Money Maker</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id atque iure excepturi possimus. Laborum reiciendis debitis vel! Deleniti ratione deserunt molestiae placeat?</p>
                 </div>
-                <div class="projects">
-                    <h3>Trending</h3>
+                <div class="projects" id="trending">
+                    <h5>@tegan</h5>
+                    <h5>@morgan</h5>
+                    <h5>@kendall</h5>
+                    <h5>@alex</h5>
                 </div>
             </div>
         </main>
