--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
             <div class="flex-container1">
                 <div class="search"></div>
                 <h3>Morgan Oakley</h3>
-            </div>
+            </div>                
             <div class="flex-container2">
                 <div class="intro">
                     <p>Hi there,</p>
                     <h2>Morgan Oakley (@morgan)</h2>
                 </div>
-                <div class="links">New</div>
-                <div class="links">Upload</div>
-                <div class="links">Share</div>
+                <div class="flex-container3">
+                    <div class="links">New</div>
+                    <div class="links">Upload</div>
+                    <div class="links">Share</div>
+                </div>
             </div>
         </header>
         <main id="main-content">
