--- a/index.html
+++ b/index.html
@@ -5,41 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container1">
         <aside id="sidebar">
             <div id="dashboard">
+                <img src="img/view-dashboard.svg" alt="Dashboard" width="45px" height="auto">
                 <h1>Dashboard</h1>
             </div>
             <div class="home">
+                <img src="img/home.svg" alt="Home" width="25px" height="auto">
                 <p>Home</p>
+                <img src="img/account.svg" alt="Profile" width="25px" height="auto">
                 <p>Profile</p>
+                <img src="img/message-badge.svg" alt="Messages" width="25px" height="auto">
                 <p>Messages</p>
+                <img src="img/clock-time-five.svg" alt="History" width="25px" height="auto">
                 <p>History</p>
+                <img src="img/alert-box.svg" alt="Tasks" width="25px" height="auto">
                 <p>Tasks</p>
+                <img src="img/home-group.svg" alt="Communities" width="25px" height="auto">
                 <p>Communities</p>
             </div>
             <div class="settings">
+                <img src="img/cogs.svg" alt="Settings" width="25px" height="auto">
                 <p>Settings</p>
+                <img src="img/head-question.svg" alt="Support" width="25px" height="auto">
                 <p>Support</p>
+                <img src="img/check-decagram.svg" alt="Privacy" width="25px" height="auto">
                 <p>Privacy</p>
             </div>
         </aside>
         <header id="heading">
             <div class="flex-container1">
+                <img src="img/magnify.svg" alt="Search" width="25px" height="auto">
                 <div class="search"></div>
-                <h3>Morgan Oakley</h3>
+                <img src="img/bell-badge.svg" alt="Notification" width="25px" height="auto">
+                <img class="pfp" src="img/kermit.jpg" alt="Profile Pic" width="40px" height="40px">
+                <h4>Morgan Oakley</h4>
             </div>                
             <div class="flex-container2">
                 <div class="intro">
+                    <img class="pfp" src="img/kermit.jpg" alt="Profile Pic" width="65px" height="65px">
                     <p>Hi there,</p>
                     <h2>Morgan Oakley (@morgan)</h2>
                 </div>
                 <div class="flex-container3">
-                    <div class="links">New</div>
-                    <div class="links">Upload</div>
-                    <div class="links">Share</div>
+                    <div class="links"><p>New</p></div>
+                    <div class="links"><p>Upload</p></div>
+                    <div class="links"><p>Share</p></div>
                 </div>
             </div>
         </header>
@@ -47,7 +64,7 @@
             <h3 id="project">Your Projects</h3>
             <h3 id="announcments">Announcments</h3>
             <div class="container2">
-                <div class="projects">
+                <div class="projects row1">
                     <h3>Super Cool Project</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, soluta eveniet! Eius, nostrum? Delectus, laboriosam dicta.</p>
                 </div>
@@ -57,10 +74,17 @@
                 </div>
                 <div class="projects" id="announcments">
                     <h5>Site Maintenance</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <br>
                     <hr>
+                    <br>
                     <h5>Community Share Day</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem, alias.</p>
+                    <br>
                     <hr>
+                    <br>
                     <h5>Update Privacy Policy</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam rerum in aliquid nostrum cupiditate.</p>
                 </div>
                 <div class="projects">
                     <h3>Impossible App</h3>
@@ -80,9 +104,13 @@
                 </div>
                 <div class="projects" id="trending">
                     <h5>@tegan</h5>
+                    <p>World Peace Builder</p>
                     <h5>@morgan</h5>
+                    <p>Super Cool Project</p>
                     <h5>@kendall</h5>
+                    <p>Life Changing App</p>
                     <h5>@alex</h5>
+                    <p>No Traffic Maker</p>
                 </div>
             </div>
         </main>
