--- a/index.html
+++ b/index.html
@@ -17,26 +17,44 @@
                 <h1>Dashboard</h1>
             </div>
             <div class="home">
-                <img src="img/home.svg" alt="Home" width="25px" height="auto">
-                <p>Home</p>
-                <img src="img/account.svg" alt="Profile" width="25px" height="auto">
-                <p>Profile</p>
-                <img src="img/message-badge.svg" alt="Messages" width="25px" height="auto">
-                <p>Messages</p>
-                <img src="img/clock-time-five.svg" alt="History" width="25px" height="auto">
-                <p>History</p>
-                <img src="img/alert-box.svg" alt="Tasks" width="25px" height="auto">
-                <p>Tasks</p>
-                <img src="img/home-group.svg" alt="Communities" width="25px" height="auto">
-                <p>Communities</p>
+                <div class="icon">
+                    <img src="img/home.svg" alt="Home" width="25px" height="auto">
+                    <p>Home</p>
+                </div>
+                <div class="icon">
+                    <img src="img/account.svg" alt="Profile" width="25px" height="auto">
+                    <p>Profile</p>
+                </div>
+                <div class="icon">
+                    <img src="img/message-badge.svg" alt="Messages" width="25px" height="auto">
+                    <p>Messages</p>
+                </div>
+                <div class="icon">
+                    <img src="img/clock-time-five.svg" alt="History" width="25px" height="auto">
+                    <p>History</p>
+                </div>
+                <div class="icon">
+                    <img src="img/alert-box.svg" alt="Tasks" width="25px" height="auto">
+                    <p>Tasks</p>
+                </div>
+                <div class="icon">
+                    <img src="img/home-group.svg" alt="Communities" width="25px" height="auto">
+                    <p>Communities</p>
+                </div>
             </div>
             <div class="settings">
-                <img src="img/cogs.svg" alt="Settings" width="25px" height="auto">
-                <p>Settings</p>
-                <img src="img/head-question.svg" alt="Support" width="25px" height="auto">
-                <p>Support</p>
-                <img src="img/check-decagram.svg" alt="Privacy" width="25px" height="auto">
+                <div class="icon">
+                    <img src="img/cogs.svg" alt="Settings" width="25px" height="auto">
+                    <p>Settings</p>
+                </div>
+                <div class="icon">
+                    <img src="img/head-question.svg" alt="Support" width="25px" height="auto">
+                    <p>Support</p>
+                </div>
+                    <div class="icon">
+                    <img src="img/check-decagram.svg" alt="Privacy" width="25px" height="auto">
                 <p>Privacy</p>
+                </div>
             </div>
         </aside>
         <header id="heading">
@@ -48,8 +66,8 @@
                 <h4>Morgan Oakley</h4>
             </div>                
             <div class="flex-container2">
-                <div class="intro">
                     <img class="pfp" src="img/kermit.jpg" alt="Profile Pic" width="65px" height="65px">
+                <div class="intro">
                     <p>Hi there,</p>
                     <h2>Morgan Oakley (@morgan)</h2>
                 </div>
@@ -63,16 +81,27 @@
         <main id="main-content">
             <h3 id="project">Your Projects</h3>
             <h3 id="announcments">Announcments</h3>
+            <h3 id="trend">Trending</h3>
             <div class="container2">
                 <div class="projects row1">
                     <h3>Super Cool Project</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, soluta eveniet! Eius, nostrum? Delectus, laboriosam dicta.</p>
+                    <div class="badges">
+                        <img src="img/star-plus.svg" alt="Favorite" width="35px" height="35px">
+                        <img src="img/eye-circle-outline.svg" alt="Watch" width="35px" height="35px">
+                        <img src="img/share-variant.svg" alt="Share" width="35px" height="35px">
+                    </div>  
                 </div>
                 <div class="projects">
                     <h3>Less Cool Project</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident molestias ipsum, nihil incidunt laboriosam placeat. At magnam voluptas exercitationem magni veniam maxime impedit quasi?</p>
+                    <p>Lorem ipsum dolo, nihil incidunt laboriosam placeat. At magnam voluptas exercitationem magni veniam maxime impedit quasi?</p>
+                    <div class="badges">
+                        <img src="img/star-plus.svg" alt="Favorite" width="35px" height="35px">
+                        <img src="img/eye-circle-outline.svg" alt="Watch" width="35px" height="35px">
+                        <img src="img/share-variant.svg" alt="Share" width="35px" height="35px">
+                    </div>  
                 </div>
-                <div class="projects" id="announcments">
+                <div class="projects" id="maintain">
                     <h5>Site Maintenance</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     <br>
@@ -89,28 +118,60 @@
                 <div class="projects">
                     <h3>Impossible App</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aut minus vero a laborum.</p>
+                    <div class="badges">
+                        <img src="img/star-plus.svg" alt="Favorite" width="35px" height="35px">
+                        <img src="img/eye-circle-outline.svg" alt="Watch" width="35px" height="35px">
+                        <img src="img/share-variant.svg" alt="Share" width="35px" height="35px">
+                    </div>  
                 </div>
                 <div class="projects">
                     <h3>Easy Peasy App</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, praesentium ratione? Voluptatibus natus exercitationem, voluptate rerum qui recusandae quibusdam doloribus.</p>
+                    <p>Lorem ipsum dolor oluptatibus natus exercitationem, voluptate rerum qui recusandae quibusdam doloribus.</p>
+                    <div class="badges">
+                        <img src="img/star-plus.svg" alt="Favorite" width="35px" height="35px">
+                        <img src="img/eye-circle-outline.svg" alt="Watch" width="35px" height="35px">
+                        <img src="img/share-variant.svg" alt="Share" width="35px" height="35px">
+                    </div>  
                 </div>
                 <div class="projects" id="ad">
                     <h3>Ad Blocker</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eligendi quia blanditiis maxime in suscipit voluptates adipisci repellendus.</p>
+                    <div class="badges">
+                        <img src="img/star-plus.svg" alt="Favorite" width="35px" height="35px">
+                        <img src="img/eye-circle-outline.svg" alt="Watch" width="35px" height="35px">
+                        <img src="img/share-variant.svg" alt="Share" width="35px" height="35px">
+                    </div>  
                 </div>
                 <div class="projects" id="money">
                     <h3>Money Maker</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id atque iure excepturi possimus. Laborum reiciendis debitis vel! Deleniti ratione deserunt molestiae placeat?</p>
+                    <p>Lorem ipsum dolor  elit. Id atque iure excepturi possimus. Laborum reiciendis debitis vel! Deleniti ratione deserunt molestiae placeat?</p>
+                    <div class="badges">
+                        <img src="img/star-plus.svg" alt="Favorite" width="35px" height="35px">
+                        <img src="img/eye-circle-outline.svg" alt="Watch" width="35px" height="35px">
+                        <img src="img/share-variant.svg" alt="Share" width="35px" height="35px">
+                    </div> 
                 </div>
                 <div class="projects" id="trending">
-                    <h5>@tegan</h5>
-                    <p>World Peace Builder</p>
-                    <h5>@morgan</h5>
-                    <p>Super Cool Project</p>
-                    <h5>@kendall</h5>
-                    <p>Life Changing App</p>
-                    <h5>@alex</h5>
-                    <p>No Traffic Maker</p>
+                    <div class="socials">
+                        <img class="pfp" src="img/piggy.jfif" alt="Profile Pic" width="35px" height="35px">
+                        <h5>@tegan</h5>
+                        <p>World Peace Builder</p>
+                    </div>
+                    <div class="socials">
+                        <img class="pfp" src="img/kermit.jpg" alt="Profile Pic" width="35px" height="35px">
+                        <h5>@morgan</h5>
+                        <p>Super Cool Project</p>
+                    </div>
+                    <div class="socials">
+                        <img class="pfp" src="img/bear.jpeg" alt="Profile Pic" width="35px" height="35px">
+                        <h5>@kendall</h5>
+                        <p>Life Changing App</p>
+                    </div>
+                    <div class="socials">
+                        <img class="pfp" src="img/animal.jfif" alt="Profile Pic" width="35px" height="35px">
+                        <h5>@alex</h5>
+                        <p>No Traffic Maker</p>
+                    </div>
                 </div>
             </div>
         </main>
